@@ -1,5 +1,5 @@
 %------------------------------------------
-%	$Id: GMT_Chapter_4.tex,v 1.120 2009-05-06 16:25:35 guru Exp $
+%	$Id: GMT_Chapter_4.tex,v 1.121 2009-05-08 01:05:10 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2009.
@@ -915,7 +915,8 @@ current directory.  If the file is not found, the programs
 will look in two other directories pointed to by environmental
 parameters (if set).  These are \textbf{GMT\_DATADIR} and
 \textbf{GMT\_USERDIR}, and they may be set by the user to point to directories
-that contain data sets of general use.  Normally, the first directory will
+that contain data sets of general use.  Normally, the first directory (or directories:
+add multiple paths by separating them with colons (semi-colons under Windows)) will
 hold data sets of a general nature (tables, grids), although a particular use
 is to make available large grids accessible via the supplemental programs \GMTprog{grdraster}
 or \GMTprog{img2grd}; see Appendix~\ref{app:A} for information
@@ -1781,10 +1782,11 @@ simply reports back how many bad records were skipped during reading.
 	parameter is not set it defaults to the share sub-directory selected during the \GMT\
 	install process (e.g., your answer to question C.9 on the web install form).  If no selection
 	was made the ultimate default is the share directory under the \GMT\ installation directory.
-	\item [\$GMT\_DATADIR] points to a directory where large and/or widely used data files can
-	be placed.  All \GMT\ programs look in this directory when a file is specified on the
+	\item [\$GMT\_DATADIR] points to one or more directory where large and/or widely used data files can
+	be placed.  All \GMT\ programs look in this directories when a file is specified on the
 	command line and it is not present in the current directory.  This allows maintainers to
 	consolidate large data files and to simplify scripting that use these files since the absolute path need not be specified.
+	Separate multiple directories with colons; under Windows you use semi-colons.
 	\item [\$GMT\_USERDIR] points to a directory where the user may place custom configuration files
 	(e.g., an alternate \filename{coastline.conf} file, preferred default settings in \filename{.gmtdefaults4},
 	custom symbols and color palettes, and
